--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </header>
     <section id="home">
         <div class="container reveal">
+            <h1>Welcome to the Page of H-Industries</h1>
             <h1>Scroll Down &#8595;</h1>
         </div>
     </section>
