--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <section id="home">
         <div class="container reveal">
             <h1>Welcome to the Page of H-Industries</h1>
-            <h1>Scroll Down &#8595;</h1>
+            <h1>Scroll Down</h1>
+            <h1> &#8595;</h1>
         </div>
     </section>
     <section id="about">
@@ -19,17 +20,15 @@
             <h2>About</h2>
             <div class="text-container">
                 <div class="text-box">
-                    <h3>Section Text</h3>
+                    <h3>H-Industries</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore eius molestiae perferendis eos provident vitae iste. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam blanditiis, officiis, voluptate quisquam aperiam nobis est, quis neque
-                        esse soluta dolores iste sit corrupti! Magnam, delectus qui. Odit, accusamus doloremque.
+                        We are german engineers from near stuttgart.
                     </p>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex est rerum id quis eaque rem suscipit reprehenderit quaerat vero nesciunt?
+                        We do programming, design and konstruktion stuff. We also combine electrical, mechanical and software into one.
                     </p>
                     <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum, eaque voluptatibus. Eaque tempore quam nesciunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum adipisci blanditiis assumenda atque officiis? Vel, fuga facilis quia reprehenderit
-                        nihil optio harum. Quo sapiente veniam atque corporis tempora non repellat?
+                        WE ARE ENGINEERS!
                     </p>
                 </div>
             </div>
@@ -41,21 +40,36 @@
             <h2>Services</h2>
             <div class="text-container">
                 <div class="text-box">
-                    <h3>Section text</h3>
+                    <h3>Software</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore eius molestiae perferendis eos provident vitae iste.
+                        Python
+                    </p>
+                    <p>
+                        HTML
+                    </p>
+                    <p>
+                        AWL
+                    </p>
+                    <p>
+                        FUP
+                    </p>
+                    <p>
+                        KOP
+                    </p>
+                    <p>
+                        SCL
                     </p>
                 </div>
                 <div class="text-box">
-                    <h3>Section Text</h3>
+                    <h3>Design</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore eius molestiae perferendis eos provident vitae iste.
+                        Solidworks
                     </p>
-                </div>
-                <div class="text-box">
-                    <h3>Section Text</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore eius molestiae perferendis eos provident vitae iste.
+                        Autodesk Fusion360
+                    </p>
+                    <p>
+                        Blender
                     </p>
                 </div>
             </div>
