set a new size of pictures to safe memory

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </header>
     <section id="home">
         <div class="container reveal">
-            <h1>Welcome to the Page of H-Industries</h1>
+            <h1>Welcome to the page of H-Industries</h1>
             <h1>Scroll Down</h1>
             <h1> &#8595;</h1>
         </div>
@@ -26,6 +26,9 @@
                     </p>
                     <p>
                         We do programming, design and konstruktion stuff. We also combine electrical, mechanical and software into one.
+                    </p>
+                    <p>
+                        We are used to create new solutions and tools in mechanical engineering, our free projects and solutions will be shown here.
                     </p>
                     <p>
                         WE ARE ENGINEERS!
