--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="text-box">
                     <h3>H-Industries</h3>
                     <p>
-                        We are german engineers near stuttgart.
+                        We are german engineers from near stuttgart.
                     </p>
                     <p>
                         We do programming, design and konstruktion stuff. We also combine electrical, mechanical and software into one.
@@ -42,26 +42,37 @@
         <div class="container reveal">
             <h2>Services</h2>
             <div class="text-container">
-                <div class="text-box" , style="text-align:center">
+                <div class="text-box">
                     <h3>Software</h3>
                     <p>
-                        Python, HTML, AWL, FUP, KOP, SCL
+                        Python
+                    </p>
+                    <p>
+                        HTML
+                    </p>
+                    <p>
+                        AWL
+                    </p>
+                    <p>
+                        FUP
+                    </p>
+                    <p>
+                        KOP
+                    </p>
+                    <p>
+                        SCL
                     </p>
                 </div>
-                <div class="text-box" , style="text-align:center">
+                <div class="text-box">
                     <h3>Design</h3>
                     <p>
-                        Solidworks, Autodesk Fusion360, Blender
+                        Solidworks
                     </p>
-                    <img src="Images/hibk_002.png" alt="Ferrari Concept-Car by HI" style="width:384px;height:216px; border-radius:10px">
-                    <p style="text-align:left">Image: Ferrari Concept-Car by HI</p>
-                    <img src="Images/hibk_002_blender.png" alt="Ferrari Concept-Car in Blender" style="width:384px;height:160px; border-radius:10px">
-                    <p style="text-align:left">Image: Ferrari Concept-Car edit in Blender</p>
-                </div>
-                <div class="text-box" , style="text-align:center">
-                    <h3>Functional Safety</h3>
                     <p>
-                        Validation of functional safety by DIN EN ISO 13849 in mechanical engineering of electrical and mechanical components.
+                        Autodesk Fusion360
+                    </p>
+                    <p>
+                        Blender
                     </p>
                 </div>
             </div>
@@ -74,17 +85,17 @@
             <div class="text-container">
                 <div class="text-box">
                     <h3>Section Text</h3>
-                    <p>Coming soon.</p>
-                    <p>.</p>
-                    <p>.</p>
-                    <p>.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
                 <div class="text-box">
                     <h3>Section Text</h3>
-                    <p>Coming soon.</p>
-                    <p>.</p>
-                    <p>.</p>
-                    <p>.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
             </div>
         </div>
