Setup Contact Text

--- a/index.html
+++ b/index.html
@@ -85,17 +85,17 @@
             <div class="text-container">
                 <div class="text-box">
                     <h3>Section Text</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Coming soon</p>
+                    <p>.</p>
+                    <p>.</p>
+                    <p>.</p>
                 </div>
                 <div class="text-box">
                     <h3>Section Text</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Coming soon</p>
+                    <p>.</p>
+                    <p>.</p>
+                    <p>.</p>
                 </div>
             </div>
         </div>
