update the seconds picture

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </p>
                     <img src="Images/hibk_002.png" alt="Blender Rendering Ferrari Concept-Car by HI">
                     <p>Image 1: Blender Rendering Ferrari Concept-Car by HI</p>
-                    <img src="Images/hibk_002_blender.png" alt="Blender Edit-Mode">
+                    <img src="Images/hibk_002_blender.png" alt="Blender Edit-Mode" style="width:384">
                     <p>Image 2: Blender Edit-Mode Ferrari Concept-Car</p>
                 </div>
             </div>
