--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     </header>
     <section id="home">
         <div class="container reveal">
-            <h1>Welcome to the page of H-Industries</h1>
-            <h1>Scroll Down</h1>
+            <h1>Willkommen bei H-Industries</h1>
+            <h1>Swipe Down</h1>
             <h1> &#8595;</h1>
         </div>
     </section>
@@ -22,13 +22,14 @@
                 <div class="text-box">
                     <h3>H-Industries</h3>
                     <p>
-                        We are german engineers from near stuttgart.
+                        Wir sind Ingenieure aus dem Stuttgarter Umfeld.
                     </p>
                     <p>
-                        We do programming, design and konstruktion stuff. We also combine electrical, mechanical and software into one.
+                        Wir verantworten die Programmierung von Applikationsanwendungen, Erstellung von Desgins und Konstruktionen sowie die Validierung der funktionalen Sicherheit nach DIN EN ISO 13849.
                     </p>
                     <p>
-                        We are used to create new solutions and tools in mechanical engineering, our free projects and solutions will be shown here.
+                        Wir Entwickeln simple Anwendungsmöglichekeiten im Maschinebau und Sonstigen Themenbereichen wo Software Großen leisten kann. Das ganze erfolgt ganz nach dem Motto:
+
                     </p>
                     <p>
                         WE ARE ENGINEERS!
@@ -64,7 +65,7 @@
                     </p>
                 </div>
                 <div class="text-box">
-                    <h3>Design</h3>
+                    <h3>Design/Konstruktion</h3>
                     <p>
                         Solidworks
                     </p>
@@ -75,9 +76,19 @@
                         Blender
                     </p>
                     <img src="Images/hibk_002.png" alt="Blender Rendering Ferrari Concept-Car by HI">
-                    <p>Image 1: Blender Rendering Ferrari Concept-Car by HI</p>
+                    <p>Bild 1: Blender Rendering Ferrari Concept-Car by HI</p>
                     <img src="Images/hibk_002_blender.png" alt="Blender Edit-Mode" width=384px height=260px>
-                    <p>Image 2: Blender Edit-Mode Ferrari Concept-Car</p>
+                    <p>Bild 2: Blender Edit-Mode Ferrari Concept-Car</p>
+                </div>
+                <div class="text-box">
+                    <h3>
+                        Funktionale Sicherheit
+                    </h3>
+                    <p>
+                        Validierung der funktionalen Sicherheit unter Berücksichtigung der DIN EN ISO 13849 mittels Sistema.
+                    </p>
+                    <img src="Images/13849.png" , alt="DIN EN ISO 13849">
+                    <p>Bild 3: Performancelevel DIN EN ISO 13849</p>
                 </div>
             </div>
         </div>
