--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <header>
         <link rel="stylesheet" href="style.css" />
         <nav>
+            <img class="logo-img" src="Images/hi_logo.png" width="50" height="Auto">
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
             <a href="#services">Services</a>
@@ -98,13 +99,6 @@
         <div class="container reveal">
             <h2>Contact</h2>
             <div class="text-container">
-                <div class="text-box">
-                    <h3>Section Text</h3>
-                    <p>Coming soon</p>
-                    <p>.</p>
-                    <p>.</p>
-                    <p>.</p>
-                </div>
                 <div class="text-box">
                     <h3>Section Text</h3>
                     <p>Coming soon</p>
