correct an mistake

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         Wir verantworten die Programmierung von Applikationsanwendungen, Erstellung von Desgins und Konstruktionen sowie die Validierung der funktionalen Sicherheit nach DIN EN ISO 13849.
                     </p>
                     <p>
-                        Wir Entwickeln simple Anwendungsmöglichekeiten im Maschinebau und Sonstigen Themenbereichen wo Software Großen leisten kann. Das ganze erfolgt ganz nach dem Motto:
+                        Wir Entwickeln simple Anwendungsmöglichekeiten im Maschinebau und Sonstigen Themenbereichen wo Software großes leisten kann. Das ganze erfolgt ganz nach dem Motto:
 
                     </p>
                     <p>
