--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                         Autodesk Fusion360
                     </p>
                     <p>
+                        Bild-/Videobearbeitung
+                    </p>
+                    <p>
                         Blender
                     </p>
                     <img src="Images/hibk_002.png" alt="Blender Rendering Ferrari Concept-Car by HI">
