--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
             <a href="#services">Services</a>
+            <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
@@ -93,6 +94,19 @@
                     </p>
                     <img src="Images/13849.png" , alt="DIN EN ISO 13849">
                     <p>Bild 3: Performancelevel DIN EN ISO 13849</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="projects">
+        <div class="container reveal">
+            <h2>Projects</h2>
+            <div class="text-container">
+                <div class="text-box">
+                    <h3>Project 1: Rasperry PI I^2C</h3>
+                    <p>
+                        Coming soon..
+                    </p>
                 </div>
             </div>
         </div>
