add 6 and 7 section style

--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
             </div>
         </div>
     </section>
+    <section id="services">
+        <div class="container reveal">
+            <h2>Konstruktion und Desgin</h2>
+
+        </div>
+    </section>
     <section id="projects">
         <div class="container reveal">
             <h2>Projects</h2>
@@ -111,6 +117,7 @@
             </div>
         </div>
     </section>
+
 
     <section id="contact">
         <div class="container reveal">
