--- a/index.html
+++ b/index.html
@@ -99,9 +99,27 @@
         </div>
     </section>
     <section id="services">
+        <div id="bound-two" class="scroll-bound">
+            <div class="content">
+                <p>MP4 Video - Keyframe Interval 1</p>
+                <video width="600" muted preload>
+   			<source src="Images/rs6.mp4" type="video/mp4">
+    		<p>Your user agent does not support the HTML5 Video element.</p>
+      </video>
+            </div>
+        </div>
+
         <div class="container reveal">
             <h2>Konstruktion und Desgin</h2>
 
+            <div class="text-container">
+                <div class="text-box">
+                    <h3>Blender Modellierung</h3>
+                    <p>
+                        Design und Rendering mit Blender und dem Rendermotion "Cycles".
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
     <section id="projects">
