--- a/index.html
+++ b/index.html
@@ -67,24 +67,27 @@
                     </p>
                 </div>
                 <div class="text-box">
-                    <h3>Design/Konstruktion</h3>
+                    <h3>Konstruktion, Design und Animation</h3>
                     <p>
                         Solidworks
-                    </p>
-                    <p>
-                        Autodesk Fusion360
-                    </p>
-                    <p>
-                        Bild-/Videobearbeitung
-                    </p>
-                    <p>
-                        Blender
                     </p>
                     <img src="Images/hibk_002.png" alt="Blender Rendering Ferrari Concept-Car by HI">
                     <p>Bild 1: Blender Rendering Ferrari Concept-Car by HI</p>
                     <img src="Images/hibk_002_blender.png" alt="Blender Edit-Mode" width=384px height=260px>
                     <p>Bild 2: Blender Edit-Mode Ferrari Concept-Car</p>
+                    <video controls autoplay>
+                        <source src="Images/rs6.mp4" type="video/mp4">
+                        
+                    </video>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section id="services">
+        <div class="container reveal">
+            <h2>Konstruktion und Desgin</h2>
+
+            <div class="text-container">
                 <div class="text-box">
                     <h3>
                         Funktionale Sicherheit
@@ -94,30 +97,6 @@
                     </p>
                     <img src="Images/13849.png" , alt="DIN EN ISO 13849">
                     <p>Bild 3: Performancelevel DIN EN ISO 13849</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="services">
-        <div id="bound-two" class="scroll-bound">
-            <div class="content">
-                <p>MP4 Video - Keyframe Interval 1</p>
-                <video width="600" muted preload>
-   			        <source src="Images/rs6.mp4" type="video/mp4">
-    		        <p>Your user agent does not support the HTML5 Video element.</p>
-                </video>
-            </div>
-        </div>
-
-        <div class="container reveal">
-            <h2>Konstruktion und Desgin</h2>
-
-            <div class="text-container">
-                <div class="text-box">
-                    <h3>Blender Modellierung</h3>
-                    <p>
-                        Design und Rendering mit Blender und dem Rendermotion "Cycles".
-                    </p>
                 </div>
             </div>
         </div>
