--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
                     <p>Bild 1: Blender Rendering Ferrari Concept-Car by HI</p>
                     <img src="Images/hibk_002_blender.png" alt="Blender Edit-Mode" width=384px height=260px>
                     <p>Bild 2: Blender Edit-Mode Ferrari Concept-Car</p>
-                    <video controls autoplay>
-                        <source src="Images/rs6.mp4" type="video/mp4">
-                        
+                    <video src="Images/rs6.mp4" type="video/mp4" width="200" controls autoplay>
                     </video>
                 </div>
             </div>
@@ -85,12 +83,12 @@
     </section>
     <section id="services">
         <div class="container reveal">
-            <h2>Konstruktion und Desgin</h2>
+            <h2>Funktionale Sicherheit</h2>
 
             <div class="text-container">
                 <div class="text-box">
                     <h3>
-                        Funktionale Sicherheit
+                        DIN EN ISO 13849
                     </h3>
                     <p>
                         Validierung der funktionalen Sicherheit unter Berücksichtigung der DIN EN ISO 13849 mittels Sistema.
