--- a/index.html
+++ b/index.html
@@ -43,38 +43,23 @@
 
     <section id="services">
         <div class="container reveal">
-            <h2>Services</h2>
+            <h2>Konstruktion, Design und Animation</h2>
             <div class="text-container">
                 <div class="text-box">
-                    <h3>Software</h3>
+                    <h3>Modellierung</h3>
                     <p>
-                        Python
-                    </p>
-                    <p>
-                        HTML
-                    </p>
-                    <p>
-                        AWL
-                    </p>
-                    <p>
-                        FUP
-                    </p>
-                    <p>
-                        KOP
-                    </p>
-                    <p>
-                        SCL
-                    </p>
-                </div>
-                <div class="text-box">
-                    <h3>Konstruktion, Design und Animation</h3>
-                    <p>
-                        Solidworks
+                        Die Erstellung von Grafiken, Animationen mittels der Software Blender.
                     </p>
                     <img src="Images/hibk_002.png" alt="Blender Rendering Ferrari Concept-Car by HI">
                     <p>Bild 1: Blender Rendering Ferrari Concept-Car by HI</p>
                     <img src="Images/hibk_002_blender.png" alt="Blender Edit-Mode" width=384px height=260px>
                     <p>Bild 2: Blender Edit-Mode Ferrari Concept-Car</p>
+                </div>
+                <div class="text-box">
+                    <h3>3D CAD</h3>
+                    <p>
+                        Konstruktion und Ableitung von Bauteilen mit Solidworks und Autodesk Fusion360.
+                    </p>
                 </div>
             </div>
         </div>
@@ -93,6 +78,35 @@
                     </p>
                     <img src="Images/13849.png" , alt="DIN EN ISO 13849">
                     <p>Bild 3: Performancelevel DIN EN ISO 13849</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="service">
+        <div class="container reveal">
+            <h2>Softwarekonstruktion</h2>
+            <div class="text-container">
+                <div class="text-box">
+                    <h3>SPS</h3>
+                    <p>
+                        Programmierung von speicherprogrammierbaren Steuerungen mittels KOP, FUP, AWL und SCL.
+                    </p>
+                </div>
+                <div class="text-box">
+                    <h3>Anwendungssoftware</h3>
+                    <p>
+                        Erstellung von Anwendungsapplikationen mittels der Programmiersprache Python. Dies beinhaltet die Funktionalität und die Benutzeroberfläche. Für die Oberflächenprogrammierung wird unter anderem die gängige Bibliothek PySimpleGui verwendet.
+                    </p>
+                    <p>
+
+                        Hierbei werden ebenso gängige Kommunikationsmodelle der Industrie 4.0 eingesetzt wie TCP Modbus.
+                    </p>
+                </div>
+                <div class="text-box">
+                    <h3>Webdesign</h3>
+                    <p>
+                        Die Anwendung von Webdesign ist unsere neueste Errungenschaft und wird mit voller Leidenschaft umgesetzt. Als referenz hierfür kann diese Webseite herangezogen werden.
+                    </p>
                 </div>
             </div>
         </div>
